# regression-simple

./: .gitignore  .travis.yml  cabal.haskell-ci  cabal.project  changelog.md  example.gnu  linear.gnu  linearYerrors.gnu  quadYerrors.gnu  regression-simple.cabal
.github/workflows/: haskell-ci.yml
gnuplot/: issue8.gnu  linear.gnu  linearXYerrors.gnu  linearYerrors.gnu  orear.gnu  quad.gnu  quadXYerrors.gnu  scale.gnu  scaleXYerrors.gnu  scaleYerrors.gnu
src/Math/Regression/: Simple.hs
src/Math/Regression/Simple/: LinAlg.hs
src/Numeric/: KBN.hs  Kahan.hs
test/: generate-test-data.hs  regression-simple-tests.hs
