cabal-version:      2.4
name:               regression-simple
version:            0.2
synopsis:           Simple linear and quadratic regression
category:           Math
description:
  A simple package with a module for
  .
  * linear and quadratic regression
  .
  * linear and quadratic zeros formula
  .
  * some 2d and 3d linear algebra
  .
  All specialized to @Double@.

license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:           https://github.com/phadej/regression-simple
bug-reports:        https://github.com/phadej/regression-simple/issues
extra-source-files:
  changelog.md
  linear.dat
  quad.dat

tested-with:
  GHC ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.1

source-repository head
  type:     git
  location: https://github.com/phadej/regression-simple

library
  default-language:         Haskell2010
  ghc-options:              -Wall
  hs-source-dirs:           src
  exposed-modules:
    Math.Regression.Simple
    Math.Regression.Simple.LinAlg
    Numeric.KBN

  build-depends:
    , base     >=4.5 && <4.17
    , deepseq

  x-docspec-extra-packages: math-functions statistics

test-suite generate-test-data
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          generate-test-data.hs
  build-depends:
    , base
    , splitmix  ^>=0.1.0.4

test-suite regression-simple-tests
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          regression-simple-tests.hs
  build-depends:
    , base
    , regression-simple

  build-depends:
    , HUnit           ^>=1.6
    , math-functions  ^>=0.3.4.2
    , statistics      ^>=0.10.2.0 || ^>=0.15.2.0 || ^>=0.16.0.1
