cabal-version:      2.4
name:               regression-simple
version:            0.2.2
synopsis:           Simple linear and quadratic regression
category:           Math
description:
  A simple package with a module for
  .
  * linear and quadratic regression
  .
  * linear and quadratic zeros formula
  .
  * some 2d and 3d linear algebra
  .
  All specialized to @Double@.

license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:           https://github.com/phadej/regression-simple
bug-reports:        https://github.com/phadej/regression-simple/issues
extra-source-files:
  changelog.md
  gnuplot/linear.dat
  gnuplot/quad.dat

tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.4
   || ==9.14.1

source-repository head
  type:     git
  location: https://github.com/phadej/regression-simple

library
  default-language:         Haskell2010
  ghc-options:              -Wall
  hs-source-dirs:           src
  exposed-modules:
    Math.Regression.Simple
    Math.Regression.Simple.LinAlg
    Numeric.KBN

  build-depends:
    , base     >=4.16.4.0 && <4.23
    , deepseq  >=1.4.6.1  && <1.6

  x-docspec-extra-packages: math-functions statistics ad

test-suite generate-test-data
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          generate-test-data.hs
  build-depends:
    , base <5
    , splitmix  ^>=0.1.0.4

test-suite regression-simple-tests
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          regression-simple-tests.hs
  build-depends:
    , base
    , regression-simple

  build-depends:
    , tasty        ^>=1.5.4
    , tasty-hunit  ^>=0.10.0.3

  if impl(ghc >=7.4)
    build-depends:
      , ad              ^>=4.5.6
      , statistics      ^>=0.16.5.0

  if !impl(ghc >=8.0)
    build-depends: semigroups
